vendor/proc-macro-hack-0.5.19/tests/ui/unexpected.stderr
error: unexpected input to #[proc_macro_hack]
 --> $DIR/unexpected.rs:4:5
  |
4 | pub struct What;
  |     ^^^^^^
