vendor/proc-macro-hack-0.5.19/tests/ui/unexpected.rs
use proc_macro_hack::proc_macro_hack;

#[proc_macro_hack]
pub struct What;

fn main() {}
